# Aflo

./: .coveragerc  .gitignore  .testr.conf  CONTRIBUTING.rst  HACKING.rst  MANIFEST.in  README.rst  openstack-common.conf  requirements.txt  run_tests.sh  setup.cfg  test-requirements.txt  tox.ini
aflo/: context.py  i18n.py  notifier.py  version.py
aflo/api/: __init__.py  policy.py  versions.py
aflo/api/middleware/: access_log.py  context.py  version_negotiation.py
aflo/api/v1/: __init__.py  catalog.py  catalog_contents.py  catalog_scope.py  contracts.py  controller.py  goods.py  price.py  router.py  tickets.py  tickettemplates.py  valid_catalog.py  workflowpatterns.py
aflo/catalog/: manager.py
aflo/catalog_contents/: manager.py
aflo/catalog_scope/: manager.py
aflo/cmd/: __init__.py  api.py  control.py  manage.py  rpcapi.py
aflo/common/: broker_base.py  config.py  exception.py  jsonpatchvalidator.py  mail.py  rpc.py  tickettemplate_expansion_filter_base.py  utils.py  wsgi.py
aflo/contracts/: manager.py
aflo/db/: __init__.py  migration.py
aflo/goods/: manager.py
aflo/hacking/: checks.py
aflo/mail/: mail_template.py  mail_template_contract_error.py  mail_template_contract_registration.py
aflo/price/: manager.py
aflo/tests/: __init__.py  test_hacking.py  utils.py
aflo/tickets/: manager.py  rpcapi.py
aflo/tickettemplates/: manager.py  templates.py
aflo/valid_catalog/: manager.py
aflo/workflow_patterns/: manager.py
contrib/ci/: post_test_hook.sh
etc/: aflo-api-paste.ini  aflo-api.conf  aflo-manage.conf
tools/: install_venv.py
(+218 files in other folders)
