[metadata]
name = aflo
version = 2015.1.1
summary = OpenStack Aflo Service
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    aflo-api = aflo.cmd.api:main
    aflo-rpcapi = aflo.cmd.rpcapi:main
    aflo-control = aflo.cmd.control:main
    aflo-manage = aflo.cmd.manage:main
oslo.config.opts =
    aflo.api = aflo.opts:list_api_opts
    aflo.manage = aflo.opts:list_manage_opts
aflo.database.migration_backend =
    sqlalchemy = oslo_db.sqlalchemy.migration


[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = aflo/locale
domain = aflo

[update_catalog]
domain = aflo
output_dir = aflo/locale
input_file = aflo/locale/aflo.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = aflo/locale/aflo.pot
